objects/simplesurvey__Survey_Configuration__c.object
<CustomObject>
    <description>Referenced by the Survey Builder to save configuration details related to surveys previously created.</description>
    <fields>
        <fullName>simplesurvey__Field_Set__c</fullName>
        <description>Metadata fullName of the Field Set created for fields to use as questions in a survey created by the Survey Builder.</description>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Email_Template_Closing__c</fullName>
        <description>Recent text entered for the email template closing in the Survey Builder.</description>
        <label>Last Email Template Closing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Email_Template_Greeting__c</fullName>
        <description>Recent text entered for the email template greeting in the Survey Builder.</description>
        <label>Last Email Template Greeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Step_Completed__c</fullName>
        <description>Last step completed in the Survey Builder.</description>
        <label>Last Step Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Choose Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configure Survey Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Email Template</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Layout__c</fullName>
        <description>Metadata fullName of the layout associated with a survey created using the Survey Builder.</description>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Multiselect_Picklist_Display__c</fullName>
        <description>Represents how multi-select picklists should be displayed on the survey landing page when accessed via a link on the email template generated by the Survey Builder.</description>
        <label>Multiselect Picklist Display</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Checkboxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal Checkboxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Picklist_Display__c</fullName>
        <description>Represents how picklists should be displayed on the survey landing page when accessed via a link on the email template generated by the Survey Builder.</description>
        <label>Picklist Display</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Radio Buttons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal Radio Buttons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Rating_Scale__c</fullName>
        <description>Determines the rating system to use in a survey email template generated by the Survey Builder.</description>
        <label>Rating Scale</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Record_Type__c</fullName>
        <description>Record Type to use for survey responses from the email template generated by the Survey Builder.</description>
        <label>Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Object_Field_Assignment__c</fullName>
        <description>JSON string populated by the Survey Builder representing the mapping of fields from the object being surveyed to the survey object.</description>
        <label>Survey Object Field Assignment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Object__c</fullName>
        <description>Object surveys are sent from in a survey created by the Survey Builder.</description>
        <label>Survey Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Configuration</label>
    <nameField>
        <label>Survey Configuration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>